theLanguageEmporium/force-app/main/default/objects/Quiz_Question__c/Quiz_Question__c.object-meta.xml
<CustomObject>
    <label>Quiz Question</label>
    <nameField>
        <displayFormat>Q-{000000}</displayFormat>
        <label>Quiz Question Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Quiz Questions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>