theLanguageEmporium/force-app/main/default/objects/Quiz_Question__c/fields/Correct_Answer__c.field-meta.xml
<CustomField>
    <fullName>Correct_Answer__c</fullName>
    <label>Correct Answer</label>
    <length>30</length>
    <required>true</required>
    <type>Text</type>
</CustomField>