theLanguageEmporium/force-app/main/default/objects/Quiz_Question__c/fields/Option_2__c.field-meta.xml
<CustomField>
    <fullName>Option_2__c</fullName>
    <label>Option 2</label>
    <length>30</length>
    <required>true</required>
    <type>Text</type>
</CustomField>