theLanguageEmporium/force-app/main/default/objects/Quiz_Question__c/fields/Option_4__c.field-meta.xml
<CustomField>
    <fullName>Option_4__c</fullName>
    <label>Option 4</label>
    <length>30</length>
    <type>Text</type>
</CustomField>