theLanguageEmporium/force-app/main/default/objects/Quiz_Question__c/fields/Prompt__c.field-meta.xml
<CustomField>
    <fullName>Prompt__c</fullName>
    <label>Prompt</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>