theLanguageEmporium/force-app/main/default/objects/Quiz_Question__c/fields/Quiz__c.field-meta.xml
<CustomField>
    <fullName>Quiz__c</fullName>
    <label>Quiz</label>
    <referenceTo>Quiz__c</referenceTo>
    <relationshipLabel>Quiz Questions</relationshipLabel>
    <relationshipName>Quiz_Questions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>